[package]
name = "sum_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
csv = "1.1"
[dependencies.openssl]
version = "0.10.47"
features = ["vendored"]
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"